--- a/rails/instagram/app/views/photos/index.html.erb
+++ b/rails/instagram/app/views/photos/index.html.erb
@@ -16,6 +16,7 @@
     <% @photos.each do |photo| %>
       <tr>
         <td><%= photo.image_data %></td>
+        <td><img src="<%= photo.image_url %> "></td>
         <td><%= photo.user %></td>
         <td><%= photo.caption %></td>
         <td><%= link_to 'Show', photo %></td>
